--- a/patient.css
+++ b/patient.css
@@ -37,6 +37,8 @@ body {
     padding: 25px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     text-align: left;
+    border: 2px solid #1c3a67;
+
 }
 
 .feature-card h2 {
