--- a/login.css
+++ b/login.css
@@ -40,6 +40,7 @@ body {
 
 .toggle-btn {
     background: none;
+    font-family: 'Poppins', sans-serif;
     border: none;
     font-size: 1.1rem;
     font-weight: 600;
