--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body {
 }
 
 .login-btn {
+  font-family: "Poppins", sans-serif;
   background-color: #f34b4b;
   color: white;
 }
@@ -121,6 +122,7 @@ body {
 }
 
 .access-btn {
+  font-family: "Poppins", sans-serif;
   background-color: #1c3a67;
   color: white;
 }
